--- a/spring-mybatis-mulidatasource/pom.xml
+++ b/spring-mybatis-mulidatasource/pom.xml
@@ -79,6 +79,15 @@
 	<build>
 		<finalName>spring-mybatis-mulidatasource</finalName>
 		<plugins>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
